# AIMS

./: .env.example  .gitignore  Dockerfile  FRONTEND_SUMMARY.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  main.py  main_old.py  models.py
app/services/: assessment.py  content.py  graph.py  transcription.py
app/static/: style.css
app/static/css/: style.css
app/static/js/: assessment.js  content-management.js  voice-recorder.js
app/templates/: assessment.html  base.html  content_management.html  content_management_bootstrap_backup.html  course.html  dashboard.html  login.html  outcome_content.html  register.html
app/templates/partials/: feedback.html  sidebar.html
fixtures/: 01-init-lessons.js  README.md  init_lesson_data.py  validate_lesson.py
scripts/: add_content_manager_role.py  create_test_vegetable_course.py  init_database.py  migrate_add_key_concepts.py  migrate_add_pgvector.py  quick_start.sh  setup_database.sh  start_aims.sh  test_content_management.py  test_content_ui.py  test_crud_and_ai.py  test_login.py  verify_frontend_setup.py
static/: SETUP.md  app.js  index.html  style.css
