[project]
name = "aims"
version = "0.2.0"
description = "Adaptive Intelligent Mastery System - AI-powered assessment platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.1.1",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.1.0",
    "sqladmin>=0.18.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.1",
    "itsdangerous>=2.1.2",
    "pgvector>=0.3.0",
    "openai>=1.0.0",
    "pypdf>=4.0.0",
]
